

  ChangeLog.txt for libSUFR
  
  
   10: AstroFloyd, 06/11/2010
      - Added interpolate.f90 for interpolation/fitting routines
      - Added constants d2h,h2d, program_path. Renamed programname to program_name
      
    9: AstroFloyd, 5/10/2010
      - Updated Doxygen
    
    8: AstroFloyd, 5/10/2010
      - Renamed libAF to libSUFR internally
      
    7: AstroFloyd, 5/10/2010
      - Added statistics.f90
      
    6: AstroFloyd, 5/10/2010
      - Converting libAF git repository, 8/09/2010:
	- updated constants.f90
	- make constants explicitly private/public
      
    5: AstroFloyd, 5/10/2010
      - Converting libAF git repository, 8/09/2010:
	- added binning.f90
      
    4: AstroFloyd, 5/10/2010
      - Converting libAF git repository:
	- added constants.f90 (probably happened earlier, but file didn't get added)
      
    3: AstroFloyd, 5/10/2010
      - Converting libAF git repository, 19/07/2010:
	- added solvers.f90
      
    2: AstroFloyd, 5/10/2010
      - Converting libAF git repository, 13/07/2010:
        - adding compiler name to lib name and include dir
	- added libSUFR.f90
      
    1: AstroFloyd, 5/10/2010
      - Converting libAF git repository, 12/07/2010:
        - initial version
      
    
  