@@ -197,7 +197,7 @@ module SUFR_constants
 contains
   
   
-  !***********************************************************************************************************************************
+  !*********************************************************************************************************************************
   !> Define the values of all the constants used in this package
   subroutine set_constants
     implicit none
