@@ -30,7 +30,7 @@ module SUFR_statistics
 contains
   
   
-  !***********************************************************************************************************************************
+  !*********************************************************************************************************************************
   !> \brief  Compute the median of a data set - single precision
   !! \param datar  Data set
   !! \param ni    Number of data elements
@@ -47,9 +47,9 @@ contains
     compute_median_real = real(mediand)
     
   end function compute_median_real
-  !***********************************************************************************************************************************
+  !*********************************************************************************************************************************
   
-  !***********************************************************************************************************************************
+  !*********************************************************************************************************************************
   !> \brief  Compute the median of a data set - double precision
   !! \param data  Data set
   !! \param ni    Number of data elements
@@ -76,7 +76,7 @@ contains
     end if
     
   end function compute_median
-  !***********************************************************************************************************************************
+  !*********************************************************************************************************************************
   
   
   
