@@ -3,6 +3,9 @@
   ChangeLog.txt for libSUFR
   
   
+   11: AstroFloyd, 22/11/2010
+      - Run ifort with Fortran-2003 standard
+   
    10: AstroFloyd, 06/11/2010
       - Added interpolate.f90 for interpolation/fitting routines
       - Added constants d2h,h2d, program_path. Renamed programname to program_name
